[PROD-1948] Fix thread excerpt spacing and icon alignment in message sidebar

--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -9320,10 +9320,15 @@ div.profile_completion_wrap .progress_text_wrap {
 }
 
 #message-threads .thread-avatar .user-status-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   color: #fff;
   background-color: #767676;
   font-size: 17px;
   line-height: 1;
+  height: 26px;
+  width: 26px;
   padding: 4px;
   border-radius: 50%;
   position: absolute;
@@ -9433,7 +9438,6 @@ div.profile_completion_wrap .progress_text_wrap {
   display: inline-block;
   vertical-align: middle;
   font-size: 13px;
-  padding-right: 5px;
 }
 
 #message-threads .bp-message-link .thread-date:before {
@@ -9445,6 +9449,10 @@ div.profile_completion_wrap .progress_text_wrap {
   vertical-align: middle;
   background-color: #767676;
   margin-left: 3px;
+}
+
+#message-threads .bp-message-link .thread-excerpt + .thread-date {
+  padding-right: 5px;
 }
 
 #message-threads .bp-message-link .thread-excerpt + .thread-date:before {
